--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
     <div id="particles-js"></div>
 
     <div class="home  ">
+
+      <div class="icon_links">
+         <a href="#"><i class="  fa-brands fa-square-github"></i></a>
+        <a href="https://www.facebook.com/joshua.natedaseco"> <i class="  fa-brands fa-square-facebook"></i></a>
+        <a href="http://www.instagram.com/dazec_"> <i class="  fa-brands fa-square-instagram"></i></a>
+        <a href="mailto: dasecojoshua@gmail.com"> <i class="  fa-solid fa-square-envelope"></i></a>
+      </div>
+
       <div class="home_wrapper">
         <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hi, my name is</p>
 
