--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
     <div class="home  ">
 
       <div class="icon_links">
-         <a href="#"><i class="  fa-brands fa-square-github"></i></a>
-        <a href="https://www.facebook.com/joshua.natedaseco"> <i class="  fa-brands fa-square-facebook"></i></a>
-        <a href="http://www.instagram.com/dazec_"> <i class="  fa-brands fa-square-instagram"></i></a>
-        <a href="mailto: dasecojoshua@gmail.com"> <i class="  fa-solid fa-square-envelope"></i></a>
+         <a href="#"><i class="  fa-brands fa-github"></i></a>
+        <a href="https://www.facebook.com/joshua.natedaseco"> <i class="  fa-brands fa-facebook"></i></a>
+        <a href="http://www.instagram.com/dazec_"> <i class="  fa-brands fa-instagram"></i></a>
+        <a href="mailto: dasecojoshua@gmail.com"> <i class="  fa-solid fa-envelope"></i></a>
       </div>
 
       <div class="home_wrapper">
