--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 
     <div class="home  ">
 
-      <div class="icon_links">
+      <div id="a" class="icon_links">
          <a href="#"><i class="  fa-brands fa-github"></i></a>
         <a href="https://www.facebook.com/joshua.natedaseco"> <i class="  fa-brands fa-facebook"></i></a>
         <a href="http://www.instagram.com/dazec_"> <i class="  fa-brands fa-instagram"></i></a>
         <a href="mailto: dasecojoshua@gmail.com"> <i class="  fa-solid fa-envelope"></i></a>
       </div>
 
-      <div class="home_wrapper">
+      <div id="b" class="home_wrapper">
         <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hi, my name is</p>
 
         <div>
