modified project section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- Home Section-->
   <div class="home_container " id="#">
-    <div id="particles-js"></div>
+    <div id="particles-j"></div>
 
 
     <div class="home  ">
@@ -90,7 +90,7 @@
       </div>
 
       <div id="b" class="home_wrapper">
-        <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hi, my name is</p>
+        <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hi there, my name is</p>
 
         <div>
 
@@ -107,7 +107,7 @@
 
         </div>
 
-        <p data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="greetings2">Hey! How nice of
+        <p data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="greetings2">How nice of
           you
           to look at my personal site, Thank you!
         </p>
@@ -228,7 +228,8 @@
           <img src="images/hotel.png" class="project_image" alt="hfos" loading="lazy">
 
           <div class="overlay-title">
-            <h2>Hotel Front Office System with Online Reservation</h2>
+            <p class="title1">Hotel Front Office System with Online Reservation</p>
+            <p class="title2">Web Application</p>
           </div>
 
           <div class="p-overlay">
@@ -255,7 +256,9 @@
           <img src="images/repos.png" class="project_image" alt="repos" loading="lazy">
 
           <div class="overlay-title">
-            <h2>Digital Research Repository</h2>
+            <p class="title1">Digital Research Repository</p>
+            <p class="title2">Web Application</p>
+
           </div>
 
           <div class="p-overlay">
@@ -279,7 +282,9 @@
           <img src="images/qr.png" class="project_image" alt="qr" loading="lazy">
 
           <div class="overlay-title">
-            <h2>Attendance Monitoring using QR Code</h2>
+            <p class="title1">Attendance Monitoring using QR Code</p>
+            <p class="title2">Android Application</p>
+
           </div>
 
           <div class="p-overlay">
@@ -303,7 +308,9 @@
           <img src="images/webpage.png" class="project_image" alt="web" loading="lazy">
 
           <div class="overlay-title">
-            <h2>Personal Webpage</h2>
+            <p class="title1">Personal Webpage</p>
+            <p class="title2">Website</p>
+
           </div>
 
           <div class="p-overlay">
