modified project section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- Home Section-->
   <div class="home_container " id="#">
-    <div id="particles-j"></div>
+    <div id="particles-js"></div>
 
 
     <div class="home  ">
