--- a/index.html
+++ b/index.html
@@ -90,31 +90,17 @@
       </div>
 
       <div id="b" class="home_wrapper">
-        <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hi there, my name is</p>
+        <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hi there, I'm</p>
 
         <div>
-
-          <p data-aos="fade-right" data-aos-delay="400" data-aos-easing="ease-in-out" class=" name">JOSHUA DASECO.</p>
-
-          <div class="softdev">
-            <div class="box">
-              <div class="title">
-                <div class="block  "></div>
-                <p class="  dev">Web Developer</p>
-              </div>
-            </div>
-          </div>
-
+          <p data-aos="fade-right" data-aos-delay="400" data-aos-easing="ease-in-out" class=" name">Daseco,</p>
         </div>
 
-        <p data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="greetings2">How nice of
-          you
-          to look at my personal site, Thank you!
-        </p>
-        <p data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="greetings3">I am a developer
-          who
-          is passionate about building and
-          designing <strong>Web Applications. </strong></p>
+        <p data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="greetings2"> a 
+          <strong class="strong_yellow">Web Developer</strong>.</p>
+         
+        <p data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="greetings3">I'm passionate 
+          about building and designing <strong>Web Applications. </strong></p>
 
         <a data-aos="fade-up" data-aos-delay="350" data-aos-easing="ease-in-out" class="button"
           href="https://www.linkedin.com/in/joshua-daseco-8255a9245"> <i class="space fa-brands fa-linkedin"></i>Let's
