--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <!-- About Section-->
   <div id="about" class="about">
-    <h1 data-aos="slide-down" data-aos-delay="200">WHAT I DO.</h1>
+    <h1 data-aos="slide-down" data-aos-delay="200">/ABOUT ME.</h1>
 
 
     <div class="about_flex">
@@ -200,7 +200,7 @@
 
     <div data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-out">
 
-      <h1>SOME OF MY WORKS.</h1>
+      <h1>/SOME OF MY WORKS.</h1>
       <p>This are some of my projects when I was starting developing some web applications and android application.
        </p>
     </div>
@@ -325,7 +325,7 @@
 
   <div id="contact" class="contact">
 
-    <h1 data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-out">SAY HI <span class="wave">&#128075</span></h1>
+    <h1 data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-out">/SAY HI <span class="wave">&#128075</span></h1>
 
     <div class="flex-contact">
       <div class="flex-contact-left">
