added icons overlay

--- a/index.html
+++ b/index.html
@@ -143,47 +143,66 @@
         <div class="icons_container">
           <div data-aos="fade-up" data-aos-delay="100" data-aos-easing="ease-in-out" class="icons">
             <img src="images/html.png" class="icon_image" alt="icon" loading="lazy">
-            <p>HTML</p>
+            <div class="icons_overlay">
+              <p>HTML</p>
+            </div>
           </div>
 
           <div data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-out" class="icons">
             <img src="images/js.png" class="icon_image" alt="icon" loading="lazy">
-            <p>JavaScript</p>
+            <div class="icons_overlay">
+              <p>JavaScript</p>
+            </div>
           </div>
 
           <div data-aos="fade-up" data-aos-delay="300" data-aos-easing="ease-in-out" class="icons">
             <img src="images/css.png" class="icon_image" alt="icon" loading="lazy">
-            <p>CSS</p>
+            <div class="icons_overlay">
+              <p>CSS</p>
+            </div>
           </div>
 
           <div data-aos="fade-up" data-aos-delay="400" data-aos-easing="ease-in-out" class="icons">
             <img src="images/php.png" class="icon_image" alt="icon" loading="lazy">
-            <p>PHP</p>
+            <div class="icons_overlay">
+              <p>PHP</p>
+            </div>
           </div>
 
           <div data-aos="fade-up" data-aos-delay="500" data-aos-easing="ease-in-out" class="icons">
             <img src="images/java.png" class="icon_image" alt="icon" loading="lazy">
-            <p>Java</p>
+            <div class="icons_overlay">
+              <p>Java</p>
+            </div>
           </div>
 
           <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-out" class="icons">
             <img src="images/mysql.png" class="icon_image" alt="icon" loading="lazy">
-            <p>MySQL</p>
+            <div class="icons_overlay">
+              <p>MySql</p>
+            </div>
           </div>
 
           <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-out" class="icons">
             <img src="images/git.png" class="icon_image" alt="icon" loading="lazy">
-            <p>Git</p>
+            <div class="icons_overlay">
+              <p>Git</p>
+            </div>
           </div>
 
           <div data-aos="fade-up" data-aos-delay="700" data-aos-easing="ease-in-out" class="icons">
             <img src="images/vscode.png" class="icon_image" alt="icon" loading="lazy">
-            <p>VS Code</p>
+            <div class="icons_overlay">
+              <p>VS Code</p>
+            </div>
           </div>
 
           <div data-aos="fade-up" data-aos-delay="800" data-aos-easing="ease-in-out" class="icons">
             <img src="images/photoshop.png" class="icon_image" alt="icon" loading="lazy">
-            <p>Photoshop</p>
+
+            <div class="icons_overlay">
+              <p>Photoshop</p>
+            </div>
           </div>
 
         </div>
