--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     <h1 data-aos="slide-down" data-aos-delay="200">/ABOUT ME.</h1>
 
 
-    <div class="about_flex">
-      <div data-aos="fade-right" data-aos-delay="200" class="about_flex1">
+    
+      <div data-aos="fade-right" data-aos-delay="200">
          
         <p>I'm passionate about developing technological solutions to everyday problems. This passion of 
           mine started when I lead my capstone team when I was on third year college. It is fun 
@@ -136,83 +136,85 @@
         </p>
       </div>
 
-      <div class="about_flex2">
-        <p data-aos="slide-down" data-aos-delay="300" data-aos-easing="ease-in-out">My Techstack</p>
-
-
-        <div class="icons_container">
-          <div data-aos="fade-up" data-aos-delay="100" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/html.png" class="icon_image" alt="icon" loading="lazy">
-            <div class="icons_overlay">
-              <p>HTML</p>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/js.png" class="icon_image" alt="icon" loading="lazy">
-            <div class="icons_overlay">
-              <p>JavaScript</p>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" data-aos-delay="300" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/css.png" class="icon_image" alt="icon" loading="lazy">
-            <div class="icons_overlay">
-              <p>CSS</p>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" data-aos-delay="400" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/php.png" class="icon_image" alt="icon" loading="lazy">
-            <div class="icons_overlay">
-              <p>PHP</p>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" data-aos-delay="500" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/java.png" class="icon_image" alt="icon" loading="lazy">
-            <div class="icons_overlay">
-              <p>Java</p>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/mysql.png" class="icon_image" alt="icon" loading="lazy">
-            <div class="icons_overlay">
-              <p>MySql</p>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/git.png" class="icon_image" alt="icon" loading="lazy">
-            <div class="icons_overlay">
-              <p>Git</p>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" data-aos-delay="700" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/vscode.png" class="icon_image" alt="icon" loading="lazy">
-            <div class="icons_overlay">
-              <p>VS Code</p>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" data-aos-delay="800" data-aos-easing="ease-in-out" class="icons">
-            <img src="images/photoshop.png" class="icon_image" alt="icon" loading="lazy">
-
-            <div class="icons_overlay">
-              <p>Photoshop</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-
   </div>
 
   <!-- End of About Section-->
+
+
+  <!-- my Techstack-->
+  <div class="skills">
+    <p data-aos="slide-down" data-aos-delay="300" data-aos-easing="ease-in-out">My Techstack</p>
+
+    <div class="icons_container">
+      <div data-aos="fade-up" data-aos-delay="100" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/html.png" class="icon_image" alt="icon" loading="lazy">
+        <div class="icons_overlay">
+          <p>HTML</p>
+        </div>
+      </div>
+
+      <div data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/js.png" class="icon_image" alt="icon" loading="lazy">
+        <div class="icons_overlay">
+          <p>JavaScript</p>
+        </div>
+      </div>
+
+      <div data-aos="fade-up" data-aos-delay="300" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/css.png" class="icon_image" alt="icon" loading="lazy">
+        <div class="icons_overlay">
+          <p>CSS</p>
+        </div>
+      </div>
+
+      <div data-aos="fade-up" data-aos-delay="400" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/php.png" class="icon_image" alt="icon" loading="lazy">
+        <div class="icons_overlay">
+          <p>PHP</p>
+        </div>
+      </div>
+
+      <div data-aos="fade-up" data-aos-delay="500" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/java.png" class="icon_image" alt="icon" loading="lazy">
+        <div class="icons_overlay">
+          <p>Java</p>
+        </div>
+      </div>
+
+      <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/mysql.png" class="icon_image" alt="icon" loading="lazy">
+        <div class="icons_overlay">
+          <p>MySql</p>
+        </div>
+      </div>
+
+      <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/git.png" class="icon_image" alt="icon" loading="lazy">
+        <div class="icons_overlay">
+          <p>Git</p>
+        </div>
+      </div>
+
+      <div data-aos="fade-up" data-aos-delay="700" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/vscode.png" class="icon_image" alt="icon" loading="lazy">
+        <div class="icons_overlay">
+          <p>VS Code</p>
+        </div>
+      </div>
+
+      <div data-aos="fade-up" data-aos-delay="800" data-aos-easing="ease-in-out" class="icons">
+        <img src="images/photoshop.png" class="icon_image" alt="icon" loading="lazy">
+
+        <div class="icons_overlay">
+          <p>Photoshop</p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  <!--end my Techstack-->
+
 
   <!--  Project Section-->
   <div id="projects" class="project">
