--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     <div class="home  ">
 
       <div id="a" class="icon_links">
-         <a href="#"><i class="  fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/joshua-daseco-8255a9245"> <i class="  fa-brands fa-linkedin"></i></a>
+        <a href="#"><i class="  fa-brands fa-github"></i></a>
         <a href="https://www.facebook.com/joshua.natedaseco"> <i class="  fa-brands fa-facebook"></i></a>
         <a href="http://www.instagram.com/dazec_"> <i class="  fa-brands fa-instagram"></i></a>
         <a href="mailto: dasecojoshua@gmail.com"> <i class="  fa-solid fa-envelope"></i></a>
@@ -103,9 +104,9 @@
           about building and designing <strong>Web Applications. </strong></p>
 
         <a data-aos="fade-up" data-aos-delay="350" data-aos-easing="ease-in-out" class="button"
-          href="https://www.linkedin.com/in/joshua-daseco-8255a9245"> <i class="space fa-brands fa-linkedin"></i>Let's
-          Connect!
-        </a>
+          href="#skills"> Skills and projects</a>
+        <a data-aos="fade-up" data-aos-delay="350" data-aos-easing="ease-in-out" class="button2"
+          href="#contact">Contact me</a>
       </div>
     </div>
 
@@ -114,7 +115,7 @@
 
   <!-- About Section-->
   <div id="about" class="about">
-    <h1 data-aos="slide-down" data-aos-delay="200">/ABOUT ME.</h1>
+    <h1 data-aos="slide-down" data-aos-delay="200">ABOUT ME.</h1>
 
 
     
@@ -126,9 +127,9 @@
         </p>
 
         <p>Today I'm deeply invested in life-long learning, I'm a developer who carries a keen eye for design in a
-          user-first approach. My focus is on designing and developing responsive layouts using <strong>HTML</strong>,
-          <strong>CSS</strong>, <strong>JavaScript</strong>, and <strong>PHP</strong>, in the near future is with
-          <strong>React</strong>, <strong>NodeJS</strong>, <strong>Laravel</strong>, and more. And from my background as
+          user-first approach. My focus is on designing and developing responsive layouts using <strong class="strong_yellow">HTML</strong>,
+          <strong class="strong_yellow">CSS</strong>, <strong class="strong_yellow">JavaScript</strong>, and <strong class="strong_yellow">PHP</strong>, in the near future is with
+          <strong class="strong_yellow">React</strong>, <strong class="strong_yellow">NodeJS</strong>, <strong class="strong_yellow">Laravel</strong>, and more. And from my background as
           a BS Information Technology graduate, I'm well acquainted with bringing out solutions to complex problems.
         </p>
 
@@ -142,8 +143,8 @@
 
 
   <!-- my Techstack-->
-  <div class="skills">
-    <p data-aos="slide-down" data-aos-delay="300" data-aos-easing="ease-in-out">My Techstack</p>
+  <div  id="skills" class="skills">
+    <p >Technologies I mainly use</p>
 
     <div class="icons_container">
       <div data-aos="fade-up" data-aos-delay="100" data-aos-easing="ease-in-out" class="icons">
@@ -221,7 +222,7 @@
 
     <div data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-out">
 
-      <h1>/SOME OF MY WORKS.</h1>
+      <h1>SOME OF MY WORKS.</h1>
       <p>This are some of my projects when I was starting developing some web applications and android application.
        </p>
     </div>
@@ -236,7 +237,7 @@
 
           <div class="overlay-title">
             <p class="title1">Hotel Front Office System with Online Reservation</p>
-            <p class="title2">Web Application</p>
+            <p class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
           </div>
 
           <div class="p-overlay">
@@ -264,7 +265,7 @@
 
           <div class="overlay-title">
             <p class="title1">Digital Research Repository</p>
-            <p class="title2">Web Application</p>
+            <p class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
 
           </div>
 
@@ -290,7 +291,7 @@
 
           <div class="overlay-title">
             <p class="title1">Attendance Monitoring using QR Code</p>
-            <p class="title2">Android Application</p>
+            <p class="title2">Java, SQLite, Android</p>
 
           </div>
 
@@ -316,7 +317,7 @@
 
           <div class="overlay-title">
             <p class="title1">Personal Webpage</p>
-            <p class="title2">Website</p>
+            <p class="title2">JavaScript, HTML, CSS</p>
 
           </div>
 
@@ -346,13 +347,13 @@
 
   <div id="contact" class="contact">
 
-    <h1 data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-out">/SAY HI <span class="wave">&#128075</span></h1>
+    <h1 data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-out">SAY HI!</h1>
 
     <div class="flex-contact">
       <div class="flex-contact-left">
         <div class="contact_space_left" data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-out">
 
-          <h2>My inbox is always open.</h2>
+          <h2>My inbox is always open.<span class="wave">&#128075</span></h2>
 
           <p>Though, I am fairly introverted myself, I do
             reply to messages as
