modify some mobile view elements

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     
       <div data-aos="fade-right" data-aos-delay="200">
          
-        <p>I'm passionate about developing technological solutions to everyday problems. This passion of 
+        <p>My full name is Joshua Daseco, I'm passionate about developing technological solutions to everyday problems. This passion of 
           mine started when I lead my capstone team when I was on third year college. It is fun 
           doing, and I love designing and creating useful application. 
         </p>
@@ -398,8 +398,7 @@
 
   <!-- Footer Section-->
   <div class="footer">
-    <img src="images/jd.png" class="footer-image" alt="logo">
-
+ 
     <p>&copy; 2022 Joshua Daseco | All Rights Reserved<i class="space fa"></i> </p>
    </div>
   <!-- End of Footer Section-->
