change logo and add footer logo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <nav id="navbar" class=" ">
     <input placeholder="check" id="nav-toggle" type="checkbox">
     <div data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="logo">
-      <img src="images/jd.png" class="logo-image" alt="logo">
+      <img src="images/logo_grey.png" class="logo-image" alt="logo">
       <div class="logo_name">aseco</div>
     </div>
 
@@ -407,7 +407,7 @@
 
   <!-- Footer Section-->
   <div class="footer">
- 
+    <img src="images/logo_grey.png" class="footer_img" alt="logo">
     <p>&copy; 2022 Joshua Daseco | All Rights Reserved<i class="space fa"></i> </p>
    </div>
   <!-- End of Footer Section-->
