--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
   <!--  Project Section-->
   <div id="projects" class="project">
 
-    <div data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-out">
+    <div>
 
-      <h1>SOME OF MY WORKS.</h1>
-      <p>This are some of my projects when I was starting developing some web applications and android application.
+      <h1 data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-out">SOME OF MY WORKS.</h1>
+      <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out">This are some of my projects when I was starting developing some web applications and android application.
        </p>
     </div>
     <div class="flex-container">
