--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
 
       <div id="b" class="home_wrapper">
-        <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hi there, I'm</p>
+        <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hey there, I'm</p>
 
         <div>
           <p data-aos="fade-right" data-aos-delay="400" data-aos-easing="ease-in-out" class=" name">Daseco,</p>
