--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
       </div>
 
       <div id="b" class="home_wrapper">
-        <p data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out" class=" greetings">Hey there, I'm</p>
+        <h2 data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-out">Hey there, I'm</h2>
 
         <div>
-          <p data-aos="fade-right" data-aos-delay="400" data-aos-easing="ease-in-out" class=" name">Daseco,</p>
+          <h1 data-aos="fade-right" data-aos-delay="400" data-aos-easing="ease-in-out">Daseco,</h1>
         </div>
 
-        <p data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="greetings2"> a 
-          <strong class="strong_yellow">Web Developer</strong>.</p>
+        <h2 data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out"> a 
+          <strong class="strong_yellow">Web Developer</strong>.</h2>
          
         <p data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="greetings3">I'm passionate 
           about building and designing Web Applications.</p>
