added button to open overlay

--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
           <div class="overlay-title">
             <p class="title1">Hotel Front Office System with Online Reservation</p>
             <p class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
+            <div class="opens_overlay">
+              <i class="fa-solid fa-up-right-from-square"></i>
+            </div>
           </div>
 
           <div class="p-overlay">
@@ -274,7 +277,9 @@
           <div class="overlay-title">
             <p class="title1">Digital Research Repository</p>
             <p class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
-
+            <div class="opens_overlay">
+              <i class="fa-solid fa-up-right-from-square"></i>
+            </div>
           </div>
 
           <div class="p-overlay">
@@ -300,7 +305,9 @@
           <div class="overlay-title">
             <p class="title1">Attendance Monitoring using QR Code</p>
             <p class="title2">Java, SQLite, Android</p>
-
+            <div class="opens_overlay">
+              <i class="fa-solid fa-up-right-from-square"></i>
+            </div>
           </div>
 
           <div class="p-overlay">
@@ -326,7 +333,9 @@
           <div class="overlay-title">
             <p class="title1">Personal Webpage</p>
             <p class="title2">JavaScript, HTML, CSS</p>
-
+            <div class="opens_overlay">
+              <i class="fa-solid fa-up-right-from-square"></i>
+            </div>
           </div>
 
           <div class="p-overlay">
