remove particles js, add close overlay, and modify overlay in style.css

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- Home Section-->
   <div class="home_container " id="#">
-    <div id="particles-j"></div>
+     
 
 
     <div class="home  ">
@@ -263,6 +263,10 @@
               <a class=" project_btn2 " href="https://github.com/dazeczxc/HFOS">View Code</a>
             </div>
 
+            <div class="close_overlay">
+              <i class="fa-solid fa-xmark"></i>
+            </div>
+
 
           </div>
         </div>
@@ -290,6 +294,9 @@
             <div class="icon-project">
               <a class="project_btn1  " href="#">Live Site</a>
               <a class=" project_btn2 " href="https://github.com/dazeczxc/Research_Repos">View Code</a>
+            </div>
+            <div class="close_overlay">
+              <i class="fa-solid fa-xmark"></i>
             </div>
 
           </div>
@@ -319,6 +326,9 @@
               <a class=" project_btn1 " href="#">Live Site</a>
               <a class=" project_btn2" href="https://github.com/dazeczxc/Attendance_Monitoring">View Code</a>
             </div>
+            <div class="close_overlay">
+              <i class="fa-solid fa-xmark"></i>
+                        </div>
 
           </div>
         </div>
@@ -345,6 +355,9 @@
             <div class="icon-project">
               <a class="project_btn1 " href="#">Live Site</a>
               <a class=" project_btn2 " href="https://github.com/dazeczxc/daseco_portfolio">View Code</a>
+            </div>
+            <div class="close_overlay">
+              <i class="fa-solid fa-xmark"></i>
             </div>
 
           </div>
@@ -423,10 +436,6 @@
   <!-- scripts -->
   <!-- Main js -->
   <script src="js/main.js"></script>
-
-  <!-- Particle js -->
-  <script src="js/particles.js"></script>
-  <script src="js/app.js"></script>
 
   <!-- Animate On Scroll -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
