add opne and close button for overlays in small device

--- a/index.html
+++ b/index.html
@@ -244,14 +244,16 @@
           <img src="images/hotel.png" class="project_image" alt="hfos" loading="lazy">
 
           <div class="overlay-title">
-            <p class="title1">Hotel Front Office System with Online Reservation</p>
-            <p class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
+            <p id="title11" class="title1">Hotel Front Office System with Online Reservation</p>
+            <p id="title12" class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
+
             <div class="opens_overlay">
-              <i class="fa-solid fa-up-right-from-square"></i>
+              <a id="open-button1"><i  class="fa-solid fa-up-right-from-square"></i></a> 
             </div>
+
           </div>
 
-          <div class="p-overlay">
+          <div id="overlay1" class="p-overlay">
 
             <p>
               A capstone project built with PHP, MySQL, JavaScript, and BootStrap. A web-based application that
@@ -264,7 +266,7 @@
             </div>
 
             <div class="close_overlay">
-              <i class="fa-solid fa-xmark"></i>
+              <a id="close-button1"><i  class="fa-solid fa-xmark"></i></a>
             </div>
 
 
@@ -279,14 +281,14 @@
           <img src="images/repos.png" class="project_image" alt="repos" loading="lazy">
 
           <div class="overlay-title">
-            <p class="title1">Digital Research Repository</p>
-            <p class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
+            <p id="title21" class="title1">Digital Research Repository</p>
+            <p id="title22" class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
             <div class="opens_overlay">
-              <i class="fa-solid fa-up-right-from-square"></i>
+              <a id="open-button2"><i  class="fa-solid fa-up-right-from-square"></i></a> 
             </div>
           </div>
 
-          <div class="p-overlay">
+          <div id="overlay2" class="p-overlay">
             <p>
               A web-based application that stores research, capstone, or thesis
               paper. Built using PHP, MySQL, HTML, CSS, and JavaScript.</p>
@@ -296,7 +298,7 @@
               <a class=" project_btn2 " href="https://github.com/dazeczxc/Research_Repos">View Code</a>
             </div>
             <div class="close_overlay">
-              <i class="fa-solid fa-xmark"></i>
+              <a id="close-button2"><i  class="fa-solid fa-xmark"></i></a>
             </div>
 
           </div>
@@ -310,14 +312,14 @@
           <img src="images/qr.png" class="project_image" alt="qr" loading="lazy">
 
           <div class="overlay-title">
-            <p class="title1">Attendance Monitoring using QR Code</p>
-            <p class="title2">Java, SQLite, Android</p>
+            <p id="title31" class="title1">Attendance Monitoring using QR Code</p>
+            <p id="title32" class="title2">Java, SQLite, Android</p>
             <div class="opens_overlay">
-              <i class="fa-solid fa-up-right-from-square"></i>
+              <a id="open-button3"><i  class="fa-solid fa-up-right-from-square"></i></a> 
             </div>
           </div>
 
-          <div class="p-overlay">
+          <div id="overlay3" class="p-overlay">
             <p>
               An android application built from scratch using Java and Android
               Studio. Mainly functions to monitor the attendance of the students through QR Code.</p>
@@ -327,8 +329,8 @@
               <a class=" project_btn2" href="https://github.com/dazeczxc/Attendance_Monitoring">View Code</a>
             </div>
             <div class="close_overlay">
-              <i class="fa-solid fa-xmark"></i>
-                        </div>
+              <a id="close-button3"><i  class="fa-solid fa-xmark"></i></a>
+            </div>
 
           </div>
         </div>
@@ -341,14 +343,14 @@
           <img src="images/webpage.png" class="project_image" alt="web" loading="lazy">
 
           <div class="overlay-title">
-            <p class="title1">Personal Webpage</p>
-            <p class="title2">JavaScript, HTML, CSS</p>
+            <p id="title41" class="title1">Personal Webpage</p>
+            <p id="title42" class="title2">JavaScript, HTML, CSS</p>
             <div class="opens_overlay">
-              <i class="fa-solid fa-up-right-from-square"></i>
+              <a id="open-button4"><i  class="fa-solid fa-up-right-from-square"></i></a> 
             </div>
           </div>
 
-          <div class="p-overlay">
+          <div id="overlay4" class="p-overlay">
             <p>
               My minimal personal website I created to showcase my skills and the projects I made in one place. Fun fact: It's the website you are looking at right now.</p>
 
@@ -357,7 +359,7 @@
               <a class=" project_btn2 " href="https://github.com/dazeczxc/daseco_portfolio">View Code</a>
             </div>
             <div class="close_overlay">
-              <i class="fa-solid fa-xmark"></i>
+              <a id="close-button4"><i  class="fa-solid fa-xmark"></i></a>
             </div>
 
           </div>
