updated my logo and footer

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
   <!-- Footer Section-->
   <div class="footer">
-    <img src="images/jd.png" class="footer_img" alt="logo">
+    <img src="images/my_logo.png" class="footer_img" alt="logo">
     <p>&copy; 2022 Joshua Daseco | All Rights Reserved<i class="space fa"></i> </p>
    </div>
   <!-- End of Footer Section-->
