add links to projects

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <div id="a" class="icon_links">
         <a data-aos="zoom-in-up" data-aos-delay="100" data-aos-easing="ease-in-out" href="https://www.linkedin.com/in/joshua-daseco-8255a9245"> <i class="  fa-brands fa-linkedin"></i></a>
-        <a data-aos="zoom-in-up" data-aos-delay="200" data-aos-easing="ease-in-out"  href="#"><i class="  fa-brands fa-github"></i></a>
+        <a data-aos="zoom-in-up" data-aos-delay="200" data-aos-easing="ease-in-out"  href="https://github.com/dazeczxc"><i class="  fa-brands fa-github"></i></a>
         <a data-aos="zoom-in-up" data-aos-delay="300" data-aos-easing="ease-in-out"  href="https://www.facebook.com/joshua.natedaseco"> <i class="  fa-brands fa-facebook"></i></a>
         <a data-aos="zoom-in-up" data-aos-delay="400" data-aos-easing="ease-in-out"  href="http://www.instagram.com/dazec_"> <i class="  fa-brands fa-instagram"></i></a>
         <a data-aos="zoom-in-up" data-aos-delay="500" data-aos-easing="ease-in-out"  href="mailto: dasecojoshua@gmail.com"> <i class="  fa-solid fa-envelope"></i></a>
@@ -261,7 +261,7 @@
               real time data reservation and front office transaction.</p>
 
             <div class="icon-project">
-              <a class="project_btn1  " href="#">Live Site</a>
+              <a class="project_btn1  " href="https://idschotel.online/">Live Site</a>
               <a class=" project_btn2 " href="https://github.com/dazeczxc/HFOS">View Code</a>
             </div>
 
@@ -398,7 +398,7 @@
 
           <div class="contact_icons">
             <a href="https://www.linkedin.com/in/joshua-daseco-8255a9245"> <i class="  fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="  fa-brands fa-square-github"></i></a>
+            <a href="https://github.com/dazeczxc"><i class="  fa-brands fa-square-github"></i></a>
             <a href="https://www.facebook.com/joshua.natedaseco"> <i class="  fa-brands fa-square-facebook"></i></a>
             <a href="http://www.instagram.com/dazec_"> <i class="  fa-brands fa-square-instagram"></i></a>
             <a href="mailto: dasecojoshua@gmail.com"> <i class="  fa-solid fa-square-envelope"></i></a>
