chnge the anchor tag to button

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <p id="title12" class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
 
             <div class="opens_overlay">
-              <a id="open-button1"><i  class="fa-solid fa-up-right-from-square"></i></a> 
+              <button id="open-button1"><i  class="fa-solid fa-up-right-from-square"></i></button> 
             </div>
 
           </div>
@@ -266,7 +266,7 @@
             </div>
 
             <div class="close_overlay">
-              <a id="close-button1"><i  class="fa-solid fa-xmark"></i></a>
+              <button id="close-button1"><i  class="fa-solid fa-xmark"></i></button>
             </div>
 
 
@@ -284,7 +284,7 @@
             <p id="title21" class="title1">Digital Research Repository</p>
             <p id="title22" class="title2">PHP, MySql, HTML, CSS, JavaScript, BootStrap</p>
             <div class="opens_overlay">
-              <a id="open-button2"><i  class="fa-solid fa-up-right-from-square"></i></a> 
+              <button id="open-button2"><i  class="fa-solid fa-up-right-from-square"></i></button> 
             </div>
           </div>
 
@@ -298,7 +298,7 @@
               <a class=" project_btn2 " href="https://github.com/dazeczxc/Research_Repos">View Code</a>
             </div>
             <div class="close_overlay">
-              <a id="close-button2"><i  class="fa-solid fa-xmark"></i></a>
+              <button id="close-button2"><i  class="fa-solid fa-xmark"></i></button>
             </div>
 
           </div>
@@ -315,7 +315,7 @@
             <p id="title31" class="title1">Attendance Monitoring using QR Code</p>
             <p id="title32" class="title2">Java, SQLite, Android</p>
             <div class="opens_overlay">
-              <a id="open-button3"><i  class="fa-solid fa-up-right-from-square"></i></a> 
+              <button id="open-button3"><i  class="fa-solid fa-up-right-from-square"></i></button> 
             </div>
           </div>
 
@@ -329,7 +329,7 @@
               <a class=" project_btn2" href="https://github.com/dazeczxc/Attendance_Monitoring">View Code</a>
             </div>
             <div class="close_overlay">
-              <a id="close-button3"><i  class="fa-solid fa-xmark"></i></a>
+              <button id="close-button3"><i  class="fa-solid fa-xmark"></i></button>
             </div>
 
           </div>
@@ -346,7 +346,7 @@
             <p id="title41" class="title1">Personal Webpage</p>
             <p id="title42" class="title2">JavaScript, HTML, CSS</p>
             <div class="opens_overlay">
-              <a id="open-button4"><i  class="fa-solid fa-up-right-from-square"></i></a> 
+              <button id="open-button4"><i  class="fa-solid fa-up-right-from-square"></i></button> 
             </div>
           </div>
 
@@ -359,7 +359,7 @@
               <a class=" project_btn2 " href="https://github.com/dazeczxc/daseco_portfolio">View Code</a>
             </div>
             <div class="close_overlay">
-              <a id="close-button4"><i  class="fa-solid fa-xmark"></i></a>
+              <button id="close-button4"><i  class="fa-solid fa-xmark"></i></button>
             </div>
 
           </div>
