changed the preloader design

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-
+<!--
   <div id="preloader" class="loader_bg">
     <div class="loader">
       <div class="loader_img">
@@ -46,7 +46,10 @@
       </div>
     </div>
   </div>
-
+-->
+<div class="loader_bg">
+  <div class="lds-facebook"><div></div><div></div><div></div></div>
+</div>
 
   <!-- Navigation Menu-->
 
