--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
     </ul>
     <label for="nav-toggle" class="icon-burger">
-      <div data-aos="zoom-in-left" data-aos-delay="300" data-aos-easing="ease-in-out"  class="line"></div>
-      <div data-aos="zoom-in-left" data-aos-delay="100" data-aos-easing="ease-in-out"  class="line"></div>
-      <div data-aos="zoom-in-left" data-aos-delay="300" data-aos-easing="ease-in-out"  class="line"></div>
+      <div  class="line"></div>
+      <div  class="line"></div>
+      <div  class="line"></div>
     </label>
   </nav>
   <!-- End of Navigation Menu-->
