edited the meta tags and added a thumbnail

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
   <meta name="author" content="Joshua Daseco" />
 
   <meta name="description" content="Joshua Daseco Personal Website" />
-  <meta property="og:image" content="img/my_logo.png" />
-  <meta property="og:type" content="website" />
+
+  <meta property="og:title" content="Joshua Daseco's Portfolio Website" />
   <meta property="og:description"
     content="This is my Personal Portfolio Website where i showcase all the websites and apps i created" />
-  <meta property="og:title" content="Joshua Daseco's Portfolio Website" />
-  <meta property="og:url" content="joshuadaseco.tech" />
   <link rel="shortcut icon" href="images/my_logo.png" type="image/x-icon" />
+  <meta property="og:image" content="img/thumbnail.png" />
 
   <!-- Icons-->
   <script src="https://kit.fontawesome.com/854d289d4e.js" crossorigin="anonymous"></script>
