updated logo.. added logo_name class in style.css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <input placeholder="check" id="nav-toggle" type="checkbox">
     <div data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="logo">
       <img src="images/jd.png" class="logo-image" alt="logo">
-       
+      <p class="logo_name">daseco</p>
     </div>
 
     <ul id="links" class="links">
