--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Joshua Daseco's Portfolio Website" />
   <meta property="og:description"
     content="This is my Personal Portfolio Website where i showcase all the websites and apps i created" />
-  <link rel="shortcut icon" href="images/my_logo.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="images/my_logo1.png" type="image/x-icon" />
   <meta property="og:image" content="img/thumbnail.png" />
 
   <!-- Icons-->
@@ -47,7 +47,7 @@
   <nav id="navbar" class=" ">
     <input placeholder="check" id="nav-toggle" type="checkbox">
     <div data-aos="fade-right" data-aos-delay="300" data-aos-easing="ease-in-out" class="logo">
-      <img src="images/jd.png" class="logo-image" alt="logo">
+      <img src="images/jd1.png" class="logo-image" alt="logo">
       <p class="logo_name">daseco</p>
     </div>
 
