--- a/index.html
+++ b/index.html
@@ -397,11 +397,11 @@
       <div data-aos="fade-up" data-aos-delay="300" data-aos-easing="ease-in-out" class="flex-contact-right">
         <div class="contact_space_right">
 
-          <form action="formsubmit.co/blackdazec@gmail.com" method="POST">
-            <label for="fname">Your email</label>
-            <input type="email" id="fname" name="email" placeholder="Email" required>
-            <label for="subject">Message</label>
-            <textarea id="subject" name="message" placeholder="Message" required></textarea>
+          <form action="https://formsubmit.co/blackdazec@gmail.com" method="POST">
+            <label for="yourEmail">Your email</label>
+            <input type="email" id="yourEmail" name="email" placeholder="Email" required>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Message" required></textarea>
             <input type="submit" name="send" value="Submit">
           </form>
 
